[package]
name = "schedtoold"
version = "0.1.0"
edition = "2021"

authors = ["Stipe Kotarac <stipe@kotarac.net>"]
description = "schedtoold - daemon for automatically adjusting process scheduling"
license = "GPL-2.0-only"

homepage = "https://github.com/kotarac/schedtoold"
repository = "https://github.com/kotarac/schedtoold"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
